--- a/javascript/비교연산자와 논리값.md
+++ b/javascript/비교연산자와 논리값.md
@@ -1,5 +1,17 @@
 > 헷갈리는 것만 정리
-> 
+>
+<br>
+
+# 다른 형을 가진 값 간의 비교
+
+> [https://ko.javascript.info/comparison](https://ko.javascript.info/comparison)
+
+자바스크립트는 비교하려는 값의 자료형이 다르면 이 값들을 숫자형으로 바꾼다
+
+```jsx
+alert( '2' > 1 ); // true, 문자열 '2'가 숫자 2로 변환된 후 비교가 진행됩니다.
+alert( '01' == 1 ); // true, 문자열 '01'이 숫자 1로 변환된 후 비교가 진행됩니다.
+```
 
 # 이중 등호와 삼중 등호 차이
 
