자바스크립트 루프 수정

--- a/javascript/자바스크립트 루프.md
+++ b/javascript/자바스크립트 루프.md
@@ -233,7 +233,7 @@ for(let score of scores) {
 	total += score;
 }
 
-console.log(**total/scores.length**)
+console.log(total/scores.length)
 ```
 
 # 투두 리스트 만들어보기
@@ -268,8 +268,34 @@ console.log(**total/scores.length**)
 
 ## todos.js
 
-// 작성중
-
 ```jsx
+let input = prompt("What would you like to do?")
+const todos = ['Collect Chicken Eggs', 'Clean Litter Box']
+while(input !=='quit' && input !== 'q') {
+    if(input === 'list') {
+        console.log("**********************");
+        for(let i = 0; i < todos.length; i++) {
+            console.log(`${i}: ${todos[i]}`);
+        }
+        console.log("**********************");
+    } else if(input === 'new') {
+        const newTodo = prompt("What would you like to do?");
+        todos.push(newTodo);
+        console.log(`${newTodo} added to the list!`);
+    } else if(input === 'delete') {
+        const index = parseInt(prompt("Ok, enter an index to delete!"));
+        if(!Number.isNaN(index)) {
+            console.log(index);
+            // splice()를 이용하여 삭제
+            const deleted = todos.splice(index, 1);
+            console.log(`Ok, deleted ${deleted[0]}`);
+        } else {
+            console.log("Unknown index");
+        }
+        
+    }
+    input = prompt("What would you like to do?");
+}
 
+console.log("OK QUIT THE APP!");
 ```
