--- a/javascript/자바스크립트의 최신기능들.md
+++ b/javascript/자바스크립트의 최신기능들.md
@@ -227,3 +227,123 @@ raceResults("정예림", "정예림2", "정예림3", "정예림4")
 // SILVER MEDAL GOES TO: 정예림2
 // AND THANKS TO 정예림3,정예림4
 ```
+# 배열 구조 분해
+
+```jsx
+const raceResults = ["정예림", "호랑이", "토끼"];
+
+const [gold, silver, bronze] = raceResults; 
+gold; // "정예림"
+silver; // "호랑이"
+bronze; // "토끼"
+
+const [ fastest, ...everyoneElse] = raceResults;
+fastest; // "정예림"
+everoneElse; // ["호랑이", "토끼"]
+```
+
+# 객체 구조 분해
+
+많이 쓰이고, 순서를 따르지 않기 때문에 배열 구조 분해보다 실용적이다. 
+
+```jsx
+const runner = {
+	first: "Anne",
+	last: "Sherly",
+	country: "Canada",
+	title: "Anne of an E"
+}
+
+const {first, last, country} = runner;
+
+first; // "Anne"
+last; // "Sherly"
+country; // "Canada"
+```
+
+user의 정보가 저장된 객체에서 특정 정보만 빼내야하는 상황을 살펴보자.
+
+```jsx
+const user = {
+	email: "coin6442@gmail.com",
+	password: "123445",
+	firstName: "정",
+	lastName: "예림",
+	born: 2003,
+	died: 3000,
+	bio: "모든 일에 최선을 다한다",
+	city: "인천",
+	country: "한국"
+}
+
+// const firstName = user.firstName;
+// const lastName = user.lastName;
+const email = user.email; // 객체의 email 값을 갖는 변수를 email로 지칭
+	
+const {email} = user; // 객체에서 email이라는 이름을 가진 특성을 변수로 만드는 것
+```
+
+```jsx
+const {email, firstName, lastName, city, bio} = user;
+```
+
+이는 객체의 값을 바꾼 것이 아니라 객체의 값을 기반으로 한 다섯 개의 새 변수를  만든 것
+
+## 다른 이름의 변수로 저장
+
+```jsx
+const {born: birthYear, died: deathYear} = user;
+```
+
+## 디폴트 값
+
+만약 값이 없는 정보를 저장하려 하면 어떻게 될까?
+
+```jsx
+const {silly, born} = user;
+// 따로 작성
+const silly = user.silly; 
+```
+
+silly 는 undefined 가 나오고, 오류는 나지 않는다. 이런 경우, 디폴트값을 지정하고 싶다면
+
+```jsx
+const {city, state, hobby = 'coding'} = user;
+```
+
+이렇게 하면 된다. 
+
+> 만약 이미 있는 값인데 디폴트 값을 주면 디폴트 값은 사용되지 않는다.
+> 
+
+# 매개변수 분해
+
+```jsx
+const fullName = ({first, last}) {
+	return `${first} ${last}`
+}
+
+const runner = {
+	first: "Anne",
+	last: "Sherly",
+	country: "Canada"
+}
+
+fullName(runner); // "Anne Sherly"
+```
+
+위와 같이 객체에서 필요한 정보만 가져오도록 매개변수에서 구조분해할 수 있다.
+
+또한 필터링할 때에도 다음과 같이 사용할 수 있다. 
+
+```jsx
+movies.filter(({score}) => score >= 90)
+```
+
+map에서도 활용할 수 있다.
+
+```jsx
+movies.map({title, score, year}) => {
+	return `${title} (${movie.year}) is rated {movie.score}`
+})
+```
