자주 사용하는 명령어

--- a/github/자주 사용하는 명령어.md
+++ b/github/자주 사용하는 명령어.md
@@ -1,5 +1,16 @@
-## 📍 깃허브 최근 커밋 삭제
+## 📍 깃허브 커밋 되돌리기
+    git reset --hard a3bbb3c 
+    // 돌아가려는 이력 이후의 모든 내용 삭제
+
+    git reset --soft a3bbb3c 
+    // 돌아가려 했던 이력으로 되돌아갔지만 해당 내용의 스테이지도 그대로 존재
+
+    git reset --mixed a3bbb3c 
+    // 디폴트. 이후에 변경된 내용에 대해서는 남아있지만, 인덱스는 초기화
+
     git reset HEAD^
     git reset HEAD^ ~삭제할 최근 커밋 수
-    git push -f
+    // 현재부터 몇 개의 커밋 되돌리기
 
+    git push -f
+    // 마지막으로 강제 푸쉬
